--- a/src/scss/_advanced.scss
+++ b/src/scss/_advanced.scss
@@ -29,6 +29,7 @@
     margin-bottom: 20px;
 
     .nav__banner-title {
+      text-transform: none;
       font-weight: 600;
       font-size: 16px;
       line-height: 140%;
