--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -190,6 +190,13 @@
     min-height: 32px;
   }
 
+  &--changed {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(39, 39, 40, 1);
+  }
+
   &--large {
     font-size: 14px;
     min-height: 48px;
