--- a/src/scss/_referrals.scss
+++ b/src/scss/_referrals.scss
@@ -1,3 +1,20 @@
+.referrals-mob.desktop-dn {
+  display: block;
+
+  @media (min-width: $breakpoint992) {
+    display: none;
+  }
+}
+
+.referrals-desktop.mobile-dn {
+
+
+  @media (min-width: $breakpoint992) {
+    display: block;
+  }
+
+}
+
 .referrals {
   padding: 50px 0;
 
@@ -58,5 +75,149 @@
 
   &__btn {
     margin-top: auto;
+  }
+}
+
+.referral-block {
+  display: flex;
+  flex-direction: column;
+  padding: 16px 30px;
+  row-gap: 12px;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: #272728;
+  background-image: url(../img/reck/bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.refferal-balance {
+
+  // .refferal-balance__head
+
+  &__head {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    margin-bottom: 30px;
+  }
+
+  // .refferal-balance__sum
+
+  &__sum {
+    display: flex;
+    align-items: flex-start;
+    font-weight: 500;
+    font-size: 32px;
+
+    span {
+      margin-left: 8px;
+      margin-top: -4px;
+      font-size: 20px;
+      font-weight: 400;
+    }
+  }
+
+  // .refferal-balance__columns
+
+  &__columns {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 48px;
+    row-gap: 24px;
+    margin-bottom: 30px;
+
+    @media (max-width: $breakpoint1450) {
+      column-gap: 24px;
+      row-gap: 12px;
+    }
+
+
+    @media (max-width: $breakpoint992) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+
+  // .refferal-balance__column
+
+  &__column {
+    display: flex;
+    align-items: flex-start;
+    column-gap: 24px;
+  }
+
+  // .refferal-balance__row
+
+  &__row {
+    display: flex;
+    align-items: center;
+    column-gap: 12px;
+
+    b {
+      font-size: 14px;
+      font-weight: 600;
+    }
+
+    p {
+      font-size: 12px;
+      font-weight: 400;
+    }
+  }
+
+  // .refferal-balance__icon
+
+  &__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    min-width: 36px;
+    border-radius: 100%;
+    // background-color: #505050;
+    overflow: hidden;
+
+    img {
+      max-width: 100%;
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
+  }
+
+  // .refferal-balance__row-col
+
+  &__row-col {
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 2px;
+  }
+
+  // .refferal-balance__text
+
+  &__text {}
+
+  // .refferal-balance__footer
+
+  &__footer {
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
+    max-width: 340px;
+    width: 100%;
+  }
+
+  // .refferal-balance__btn
+
+  &__btn {}
+
+  // .refferal-balance__btn-descr
+
+  &__btn-descr {
+    margin-left: auto;
+    text-align: right;
+    font-weight: 400;
+    font-size: 12px;
+    color: #9295a5;
   }
 }
